# Seminar-Project

./: .gitignore  CHANGELOG.md  CLAUDE.md  DATABASE_SCHEMA.md  DOCKER_README.md  GRPC_CONTRACTS.md  README.md  REDIS_KEY_DESIGN.md  SECRETS_MANAGEMENT.md  STITCH_PROMPTS.md  SmartMusic.sln  docker-compose.yml  setup-repo.ps1  setup-repo.sh
.claude/: CURRENT_STATE.md  DEVLOG.md  (+3 more)
services/recommendation-service/: =6.1.0  Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
services/recommendation-service/src/recommendation_service/: main.py
services/recommendation-service/src/recommendation_service/core/: config.py  dependencies.py
services/recommendation-service/src/recommendation_service/exceptions/: domain_exceptions.py
services/recommendation-service/src/recommendation_service/infrastructure/: music_service_client.py
services/recommendation-service/src/recommendation_service/kafka/: consumer.py  handlers.py
services/recommendation-service/src/recommendation_service/middleware/: correlation_id.py
services/recommendation-service/src/recommendation_service/repositories/: redis_repository.py
services/recommendation-service/src/recommendation_service/schemas/: request.py  response.py
services/recommendation-service/src/recommendation_service/services/: recommendation_service.py  rule_engine.py
services/recommendation-service/tests/: conftest.py
services/recommendation-service/tests/integration/: test_recommendations_api.py
services/recommendation-service/tests/unit/: test_handlers.py  test_recommendation_service.py  test_rule_engine.py
(+674 files in other folders)
